--- a/public/index.html
+++ b/public/index.html
@@ -13,23 +13,23 @@
       name="viewport"
       content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width"
     />
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="FCB" />
     <meta name="twitter:title" content="FCB title" />
     <meta name="twitter:description" content="FCB description" />
     <meta
       property="twitter:image:src"
       content="https://slasscom.s3.ap-south-1.amazonaws.com/user-certificates/thumbnail/Certificate+image.png"
-    />
+    /> -->
     <meta
       name="image"
       property="og:image"
       content="https://slasscom.s3.ap-south-1.amazonaws.com/user-certificates/thumbnail/Certificate+image.png"
     />
-    <meta
+    <!-- <meta
       name="twitter:image:alt"
       content="Line-height Picker logo with the text that reads Beautify paragraphs on your website in 5 steps"
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
