--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
- 
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,6 +31,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta
+      name="image"
+      property="og:image"
+      content="https://slasscom.s3.ap-south-1.amazonaws.com/user-certificates/thumbnail/Certificate+image.png"
+    />
     <title>San's Birthday</title>
   </head>
   <body>
