--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://slasscom.s3.ap-south-1.amazonaws.com/user-certificates/thumbnail/Certificate+image.png"
+      content="https://picsum.photos/1200/627"
     />
     <title>San's Birthday</title>
   </head>
